# RakshaQuant

./: .env.example  CLAUDE.md  README.md  pyproject.toml
docs/: 1_Introduction.md  2_High_Level_Design.md  3_Low_Level_Design.md  4_System_Design.md  5_Components.md
scripts/: check_config.py  diagnose_risk.py  run_live_trading.py  run_trading.py  run_with_dashboard.py  setup.py  test_dhan_connection.py  validate_strategy.py
src/agents/: __init__.py  graph.py  market_regime.py  news_analyst.py  prediction.py  risk_compliance.py  sentiment.py  signal_validation.py  state.py  strategy_selection.py
src/api/: __init__.py  health.py
src/backtesting/: __init__.py  engine.py  strategies.py  walk_forward.py
src/config/: settings.py
src/dashboard/: cli.py
src/execution/: adapter.py  costs.py  exit_manager.py  journal.py  live_executor.py  paper_engine.py  service.py
src/finops/: __init__.py  alerts.py  cost_tracker.py
src/market/: __init__.py  data_feed.py  history_manager.py  indicators.py  live_data.py  manager.py  signals.py  simulated_data.py  sizing.py  stock_discovery.py  websocket_feed.py  yfinance_feed.py
src/memory/: analyzer.py  classifier.py  database.py  feedback.py  injection.py  performance_tracker.py  scheduler.py
src/notifications/: telegram.py
src/observability/: tracing.py
src/profit/: __init__.py  goal_engine.py
src/risk/: __init__.py  guards.py
src/utils/: __init__.py  cache.py  circuit_breaker.py  errors.py  events.py  market_time.py  rate_limiter.py
tests/: test_agents.py  test_agents_extended.py  test_agents_extra.py  test_backtesting.py  test_coverage_boost.py  test_dashboard.py  test_decision_quality.py  test_durability.py  test_execution.py  test_execution_service.py  test_finops.py  test_learning_loop.py  test_live_lifecycle.py  test_market.py  test_market_extended.py  test_market_extra.py  test_memory.py  test_notifications.py  test_observability.py  test_paper_costs.py  test_pr0_correctness.py  test_pr4_data_efficiency.py  test_profit_goal.py  test_risk_guards.py  test_runtime_fixes.py  test_utils.py  test_walk_forward.py
