[project]
name = "trading-agent"
version = "0.1.0"
description = "Agentic Paper Trading System for NSE with Learning Feedback Loop & Full Observability"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Trading Agent Team" }
]
keywords = ["trading", "agents", "langgraph", "nse", "paper-trading"]

dependencies = [
    # Agent Orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    
    # Observability
    "langsmith>=0.1.0",
    
    # Broker API
    "dhanhq>=2.0.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    
    # Data Processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Technical Indicators
    "ta>=0.11.0",
    
    # Free Tier Data Sources
    "yfinance>=0.2.0",           # Yahoo Finance for NSE data
    "feedparser>=6.0.0",         # Google News RSS parsing
    "scikit-learn>=1.3.0",       # ML for price prediction
    "beautifulsoup4>=4.12.0",    # HTML parsing for news
    
    # Async & WebSocket
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",  # CLI dashboard
    
    # Optional: Redis for caching
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 (line length) is owned by `ruff format` (line-length 100); it only flags string
# literals the formatter intentionally won't split, so it's not enforced as a lint rule.
# N806 is disabled because the codebase idiomatically uses `X` (ML feature matrix),
# `Session` (SQLAlchemy sessionmaker), and `Mock*` (test doubles) as local names.
ignore = ["E501", "N806"]

[tool.ruff.lint.per-file-ignores]
# Scripts insert the repo root onto sys.path before importing `src`, so imports follow code.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:datetime.datetime.utcnow:DeprecationWarning:sqlalchemy",
]

[tool.mypy]
python_version = "3.11"
strict = true

# Third-party libraries without type stubs / py.typed markers. Silencing the missing-import
# noise lets mypy focus on our own code. (Reaching full strict-clean across the legacy
# modules is a separate, larger annotation effort.)
[[tool.mypy.overrides]]
module = [
    "ta.*", "dhanhq.*", "feedparser", "sklearn.*", "yfinance.*",
    "pandas.*", "requests.*", "langchain_groq.*",
]
ignore_missing_imports = true
